test/corpus/entry.txt
====================================
ENTRY statement
====================================

       identification division.
       program-id. a.
       procedure division.
       entry 'DLITCBL'
       call 'CDCURDAT'
       call 'CDCDWM'.

---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (entry_statement
        name: (string))
      (call_statement
        x: (string))
      (call_statement
        x: (string))
      (period))))
